<resources>
    <string name="app_name">LearningPlat</string>
    <string name="content_description_media">Image of Course</string>
    <string name="action_1">apply</string>
    <string name="action_2">add to my list</string>
    <string name="title">course name</string>
    <string name="secondary_text">instertor name</string>
    <string name="supporting_text">price type</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="filter">filter</string>
    <string name="with_instructor">with %1$s</string>
    <string name="retry">retry</string>
    <string name="check_your_connection">Check your connection</string>
    <string name="user_comment_example">This course the best i learn so much from it i will recommend to take it . i will add so much to your life</string>
    <string name="comment_time_example">2 years ago</string>
    <string name="user_name_example">Joan Perkins</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="all_type">All</string>

    <string name="business">Business</string>
    <string name="development">Development</string>
    <string name="finance_accounting">Finance &amp; Accounting</string>
    <string name="health_fitness">Health &amp; Fitness</string>
    <string name="IT_software">IT &amp; Software</string>
    <string name="Lifestyle">Lifestyle</string>
    <string name="music">Music</string>
    <string name="personal_development">Personal Development</string>
    <string name="office_productivity">Office Productivity</string>
    <string name="photography_video">Photography &amp; Video</string>
    <string name="teaching_academics">Teaching &amp; Academics</string>
    <string name="design">Design</string>


</resources>